--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -436,7 +436,8 @@
               "AIServices",
               "CognitiveSearch",
               "ApiKey",
-              "CustomKeys"
+              "CustomKeys",
+              "CognitiveService"
             ],
             "x-ms-enum": {
               "name": "ConnectionType",
@@ -476,6 +477,11 @@
                   "name": "custom",
                   "value": "CustomKeys",
                   "description": "Generic connection that uses Custom authentication"
+                },
+                {
+                  "name": "CognitiveService",
+                  "value": "CognitiveService",
+                  "description": "Cognitive Service"
                 }
               ]
             }
@@ -9042,7 +9048,8 @@
         "AIServices",
         "CognitiveSearch",
         "ApiKey",
-        "CustomKeys"
+        "CustomKeys",
+        "CognitiveService"
       ],
       "x-ms-enum": {
         "name": "ConnectionType",
@@ -9082,6 +9089,11 @@
             "name": "custom",
             "value": "CustomKeys",
             "description": "Generic connection that uses Custom authentication"
+          },
+          {
+            "name": "CognitiveService",
+            "value": "CognitiveService",
+            "description": "Cognitive Service"
           }
         ]
       }
