--- a/specification/fabric/Microsoft.Fabric.Management/tspconfig.yaml
+++ b/specification/fabric/Microsoft.Fabric.Management/tspconfig.yaml
@@ -25,7 +25,7 @@ options:
     generate-sample: true
   "@azure-tools/typespec-ts":
     azure-sdk-for-js: true
-    is-modular-library: true
+    isModularLibrary: true
     generate-metadata: true
     hierarchy-client: false
     experimental-extensible-enums: true
