java, mgmt, ArizeAI, client

--- a/specification/liftrarize/ArizeAi.ObservabilityEval.Management/tspconfig.yaml
+++ b/specification/liftrarize/ArizeAi.ObservabilityEval.Management/tspconfig.yaml
@@ -34,8 +34,8 @@ options:
     inject-spans: true
   "@azure-tools/typespec-java":
     service-dir: "sdk/arizeaiobservabilityeval"
-    package-dir: "azure-resourceManager-arizeaiobservabilityeval"
-    namespace: "azure.resourceManager.arizeaiobservabilityeval"
+    package-dir: "azure-resourcemanager-arizeaiobservabilityeval"
+    namespace: "azure.resourcemanager.arizeaiobservabilityeval"
     service-name: "Arize AI Observability Eval"
     flavor: "azure"
 linter:
