Rename LZC/LZR ListByResourceGroup to List / remove ListBySubscription

--- a/specification/sovereign/Sovereign.Management/examples/2025-02-27-preview/LandingZoneConfigurationOperations_List.json
+++ b/specification/sovereign/Sovereign.Management/examples/2025-02-27-preview/LandingZoneConfigurationOperations_List.json
@@ -1,9 +1,10 @@
 {
-  "title": "LandingZoneConfigurationOperations_ListBySubscription",
-  "operationId": "LandingZoneConfigurationOperations_ListBySubscription",
+  "title": "LandingZoneConfigurationOperations_List",
+  "operationId": "LandingZoneConfigurationOperations_List",
   "parameters": {
     "api-version": "2025-02-27-preview",
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
+    "resourceGroupName": "rg-RemApiExample",
     "landingZoneAccountName": "lza-RemApiExample"
   },
   "responses": {
