--- a/specification/ai/ModelInference/tspconfig.yaml
+++ b/specification/ai/ModelInference/tspconfig.yaml
@@ -23,4 +23,4 @@ options:
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
   "@typespec/openapi3":
     emitter-output-dir: "{project-root}/.."
-    output-file: "{output-folder-base}/preview/{version}/openapi.yaml"
+    output-file: "{output-folder-base}/{service-name}.{version}.openapi.yaml"
