--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typespec/openapi3": "next",
     "@typespec/prettier-plugin-typespec": "next",
     "@typespec/rest": "next",
+    "@typespec/events": "next",
     "@typespec/streams": "next",
     "@typespec/versioning": "next",
     "@typespec/xml": "next",
