--- a/eng/tools/lint-diff/package.json
+++ b/eng/tools/lint-diff/package.json
@@ -19,10 +19,12 @@
     "@apidevtools/json-schema-ref-parser": "^9.0.9",
     "@azure-tools/openapi-tools-common": "^1.2.2",
     "@azure/openapi-markdown": "^0.9.4",
+    "@types/js-yaml": "^3.12.10",
     "autorest": "3.6.1",
     "axios": "^1.8.3",
     "change-case": "^5.4.4",
-    "commonmark": "^0.31.2"
+    "commonmark": "^0.31.2",
+    "js-yaml": "^3.14.1"
   },
   "devDependencies": {
     "@types/node": "^18.19.31",
