Add Custom Keys Auth type (#33185)
* Add Custom Keys Auth type

* Update model.tsp

* Add Custom Keys Connection type

* Use "custom" as enum name

* update data-plane

* tsp format

* Add new connection type (#33200)

* Add new connection type

* Udate swagger

---------

Co-authored-by: Nikolay Rovinskiy <30440255+nick863@users.noreply.github.com>

--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -435,7 +435,9 @@
               "AzureBlob",
               "AIServices",
               "CognitiveSearch",
-              "ApiKey"
+              "ApiKey",
+              "CustomKeys",
+              "CognitiveService"
             ],
             "x-ms-enum": {
               "name": "ConnectionType",
@@ -470,6 +472,16 @@
                   "name": "APIKey",
                   "value": "ApiKey",
                   "description": "Generic connection that uses API Key authentication"
+                },
+                {
+                  "name": "custom",
+                  "value": "CustomKeys",
+                  "description": "Generic connection that uses Custom authentication"
+                },
+                {
+                  "name": "CognitiveService",
+                  "value": "CognitiveService",
+                  "description": "Cognitive Service"
                 }
               ]
             }
@@ -8930,6 +8942,7 @@
         "ApiKey",
         "AAD",
         "SAS",
+        "CustomKeys",
         "None"
       ],
       "x-ms-enum": {
@@ -8950,6 +8963,11 @@
             "name": "SAS",
             "value": "SAS",
             "description": "Shared Access Signature (SAS) authentication"
+          },
+          {
+            "name": "custom",
+            "value": "CustomKeys",
+            "description": "Custom authentication"
           },
           {
             "name": "None",
@@ -9029,7 +9047,9 @@
         "AzureBlob",
         "AIServices",
         "CognitiveSearch",
-        "ApiKey"
+        "ApiKey",
+        "CustomKeys",
+        "CognitiveService"
       ],
       "x-ms-enum": {
         "name": "ConnectionType",
@@ -9064,6 +9084,16 @@
             "name": "APIKey",
             "value": "ApiKey",
             "description": "Generic connection that uses API Key authentication"
+          },
+          {
+            "name": "custom",
+            "value": "CustomKeys",
+            "description": "Generic connection that uses Custom authentication"
+          },
+          {
+            "name": "CognitiveService",
+            "value": "CognitiveService",
+            "description": "Cognitive Service"
           }
         ]
       }
@@ -9546,6 +9576,16 @@
         }
       ],
       "x-ms-discriminator-value": "ApiKey"
+    },
+    "InternalConnectionPropertiesCustomAuth": {
+      "type": "object",
+      "description": "Connection properties for connections with Custom authentication",
+      "allOf": [
+        {
+          "$ref": "#/definitions/InternalConnectionProperties"
+        }
+      ],
+      "x-ms-discriminator-value": "CustomKeys"
     },
     "InternalConnectionPropertiesNoAuth": {
       "type": "object",
