--- a/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/extension/Extensions_Upgrade.json
+++ b/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/extension/Extensions_Upgrade.json
@@ -3,7 +3,7 @@
     "subscriptionId": "{subscriptionId}",
     "resourceGroupName": "myResourceGroup",
     "machineName": "myMachine",
-    "api-version": "2025-01-13",
+    "api-version": "2025-02-19-preview",
     "extensionUpgradeParameters": {
       "extensionTargets": {
         "Microsoft.Compute.CustomScriptExtension": {
@@ -26,3 +26,4 @@
     }
   }
 }
+
