--- a/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/networkConfiguration/NetworkConfigurationsCreate.json
+++ b/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/networkConfiguration/NetworkConfigurationsCreate.json
@@ -1,6 +1,6 @@
 {
   "parameters": {
-    "api-version": "2025-01-13",
+    "api-version": "2025-02-19-preview",
     "subscriptionId": "00000000-1111-2222-3333-444444444444",
     "resourceGroupName": "hybridRG",
     "machineName": "testMachine",
@@ -55,3 +55,4 @@
     }
   }
 }
+
