--- a/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/settings/SettingsGet.json
+++ b/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/settings/SettingsGet.json
@@ -6,7 +6,7 @@
     "baseResourceType": "machines",
     "baseResourceName": "testMachine",
     "settingsResourceName": "default",
-    "api-version": "2025-01-13"
+    "api-version": "2025-02-19-preview"
   },
   "responses": {
     "200": {
@@ -24,3 +24,4 @@
     }
   }
 }
+
