--- a/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/settings/SettingsPatch.json
+++ b/specification/hybridcompute/resource-manager/Microsoft.HybridCompute/preview/2025-02-19-preview/examples/settings/SettingsPatch.json
@@ -6,7 +6,7 @@
     "baseResourceType": "machines",
     "baseResourceName": "testMachine",
     "settingsResourceName": "default",
-    "api-version": "2025-01-13",
+    "api-version": "2025-02-19-preview",
     "parameters": {
       "properties": {
         "gatewayProperties": {
@@ -31,3 +31,4 @@
     }
   }
 }
+
