--- a/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
+++ b/specification/ai/data-plane/Azure.AI.Projects/preview/2024-07-01-preview/azure-ai-projects.json
@@ -301,7 +301,7 @@
         }
       }
     },
-    "/assistants/{agentId}": {
+    "/assistants/{assistantId}": {
       "get": {
         "operationId": "Agents_GetAgent",
         "description": "Retrieves an existing agent.",
@@ -310,11 +310,7 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "name": "agentId",
-            "in": "path",
-            "description": "Identifier of the agent.",
-            "required": true,
-            "type": "string"
+            "$ref": "#/parameters/Agents.GetAgentOptions"
           }
         ],
         "responses": {
@@ -346,7 +342,7 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "$ref": "#/parameters/Agents.UpdateAgentOptions.agentId"
+            "$ref": "#/parameters/Agents.UpdateAgentOptions.assistantId"
           },
           {
             "name": "body",
@@ -386,11 +382,7 @@
             "$ref": "#/parameters/Azure.Core.Foundations.ApiVersionParameter"
           },
           {
-            "name": "agentId",
-            "in": "path",
-            "description": "Identifier of the agent.",
-            "required": true,
-            "type": "string"
+            "$ref": "#/parameters/Agents.DeleteAgentOptions"
           }
         ],
         "responses": {
@@ -4222,7 +4214,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent for which the thread should be created.",
-          "x-ms-client-name": "agentId"
+          "x-ms-client-name": "assistantId"
         },
         "thread": {
           "$ref": "#/definitions/Agents.AgentThreadCreationOptions",
@@ -4388,7 +4380,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent that should run the thread.",
-          "x-ms-client-name": "agentId"
+          "x-ms-client-name": "assistantId"
         },
         "model": {
           "type": "string",
@@ -6212,7 +6204,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent associated with the run step.",
-          "x-ms-client-name": "agentId"
+          "x-ms-client-name": "assistantId"
         },
         "thread_id": {
           "type": "string",
@@ -7430,7 +7422,7 @@
           "type": "string",
           "description": "If applicable, the ID of the agent that authored this message.",
           "x-nullable": true,
-          "x-ms-client-name": "agentId"
+          "x-ms-client-name": "assistantId"
         },
         "run_id": {
           "type": "string",
@@ -7534,7 +7526,7 @@
         "assistant_id": {
           "type": "string",
           "description": "The ID of the agent associated with the thread this run was performed against.",
-          "x-ms-client-name": "agentId"
+          "x-ms-client-name": "assistantId"
         },
         "status": {
           "$ref": "#/definitions/Agents.RunStatus",
@@ -9847,8 +9839,24 @@
     }
   },
   "parameters": {
-    "Agents.UpdateAgentOptions.agentId": {
-      "name": "agentId",
+    "Agents.DeleteAgentOptions": {
+      "name": "assistantId",
+      "in": "path",
+      "description": "Identifier of the agent.",
+      "required": true,
+      "type": "string",
+      "x-ms-parameter-location": "method"
+    },
+    "Agents.GetAgentOptions": {
+      "name": "assistantId",
+      "in": "path",
+      "description": "Identifier of the agent.",
+      "required": true,
+      "type": "string",
+      "x-ms-parameter-location": "method"
+    },
+    "Agents.UpdateAgentOptions.assistantId": {
+      "name": "assistantId",
       "in": "path",
       "description": "The ID of the agent to modify.",
       "required": true,
