--- a/.github/workflows/sdk-breaking-change-labels.yaml
+++ b/.github/workflows/sdk-breaking-change-labels.yaml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   sdk-breaking-change-labels:
+    if: ${{ contains(github.event.check_run.name, '(SDK Generation Job)') }}
     name: SDK Breaking Change Labels (Preview)
     runs-on: ubuntu-24.04
     steps:
@@ -23,10 +24,7 @@ jobs:
           sparse-checkout: |
             .github
       
-      - name: Setup Node and install deps
-        uses: ./.github/actions/setup-node-install-deps
-
-      - name: Process Check Run Event
+      - name: Get label and action
         id: get-label-and-action
         uses: actions/github-script@v7
         with:
